Get order by tableId
